--- a/Package.json
+++ b/Package.json
@@ -1,11 +1,11 @@
 {
-  "name": "112RP-Bot",
+  "name": "112rp-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.11.0"
   }
 }
